cmake_minimum_required(VERSION 3.28)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 14)

add_executable(Problem_Solving
        apple-and-orange.cpp
        arrays-introduction.cpp
        between-two-sets.cpp
        breaking-best-and-worst-records.cpp
        diagonal-difference.cpp
        ExtremelyRound.cpp
        grading.cpp
        kangaroo.cpp
        mini-max-sum.cpp
        staircase.cpp
        time-conversion.cpp
        VariableSizedArrays.cpp
        Arrays-ds.cpp)
